--- a/website/content/en/releases/14.2R/hardware.adoc
+++ b/website/content/en/releases/14.2R/hardware.adoc
@@ -80,6 +80,16 @@ AWS / Annapurna Labs:
 * Graviton 2
 * Graviton 3
 
+NXP Semiconductors:
+
+* LS1028A SoC
+* LS1046A SoC
+* LS1088A SoC
+* LX2160A SoC
+* Conclusive Engineering WHLE-LS1
+* SolidRun HoneyComb LX2
+* Traverse Technologies Ten64
+
 Raspberry Pi, more info about the support at the link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi Wiki page]:
 
 * Raspberry Pi 3
@@ -90,6 +100,8 @@ RockChip (64-bit), more info about the support at the link:https://wiki.freebsd.
 * RK3328 SoC
 * RK3399 SoC
 * NanoPC-T4
+* NanoPi R2S
+* NanoPi R2S-Plus
 * NanoPi R4S
 * Radxa
 * Pinebook Pro
@@ -1907,6 +1919,20 @@ Ethernet driver for Google Virtual NIC (gVNIC) (man:gve[4] driver)
 
 
 The
+**ice**
+driver supports the Intel Ethernet 800 series.
+Most adapters in this series with SFP28/QSFP28 cages
+have firmware that requires that Intel qualified modules are used; these
+qualified modules are listed below.
+This qualification check cannot be disabled by the driver.
+
+The
+**ice**
+driver supports 100Gb Ethernet adapters with these QSFP28 modules:
+
+
+
+The
 **igc**
 driver supports the following models:
 
@@ -1924,6 +1950,21 @@ driver:
 *	Apple iPhone tethering (all models)
 *	Apple iPad tethering (all models)
 
+
+
+The
+**ix**
+driver supports Intel 10Gb Ethernet PCIe adapters,
+including:
+
+*	Intel(R) Ethernet X553
+*	Intel(R) Ethernet X552
+*	Intel(R) Ethernet X550
+*	Intel(R) Ethernet X540 Bypass
+*	Intel(R) Ethernet X540
+*	Intel(R) Ethernet X520 Bypass (82599)
+*	Intel(R) Ethernet X520 (82599)
+*	Intel(R) 10 Gigabit Server Adapter (82598EB)
 
 
 
@@ -2320,70 +2361,6 @@ driver include:
 
 
 The
-**rtwn\_usb**
-driver supports Realtek RTL8188CUS/RTL8188RU/RTL8188EU/RTL8192CU/RTL8192EU/RTL8812AU/RTL8821AU
-based USB wireless network adapters, including:
-
-	*Card*                                *Chip*        *Bus*  
-	Alfa AWUS036NHR v2                    RTL8188RU     USB 2.0  
-	ASUS USB-AC56                         RTL8812AU     USB 3.0  
-	ASUS USB-N10 NANO                     RTL8188CUS    USB 2.0  
-	ASUS USB-N10 NANO rev B1              RTL8188EUS    USB 2.0  
-	Asus USB-N13, rev. B1                 RTL8192CU     USB 2.0  
-	Belkin F7D1102 Surf Wireless Micro    RTL8188CUS    USB 2.0  
-	Buffalo WI-U2-433DHP                  RTL8821AU     USB 2.0  
-	Buffalo WI-U2-433DM                   RTL8821AU     USB 2.0  
-	Buffalo WI-U3-866D                    RTL8812AU     USB 3.0  
-	D-Link DWA-121 rev C1A (N150 Nano)    RTL8188EU     USB 2.0  
-	D-Link DWA-123 rev D1                 RTL8188EU     USB 2.0  
-	D-Link DWA-125 rev D1                 RTL8188EU     USB 2.0  
-	D-Link DWA-131                        RTL8192CU     USB 2.0  
-	D-Link DWA-131 rev E1                 RTL8192EU     USB 2.0  
-	D-Link DWA-171 rev A1                 RTL8821AU     USB 2.0  
-	D-Link DWA-172 rev A1                 RTL8821AU     USB 2.0  
-	D-Link DWA-180 rev A1                 RTL8812AU     USB 2.0  
-	D-Link DWA-182 rev C1                 RTL8812AU     USB 3.0  
-	Edimax EW-7811Un                      RTL8188CUS    USB 2.0  
-	Edimax EW-7811UTC                     RTL8821AU     USB 2.0  
-	Edimax EW-7822UAC                     RTL8812AU     USB 3.0  
-	EDUP EP-AC1620                        RTL8821AU     USB 2.0  
-	Elecom WDC-150SU2M                    RTL8188EU     USB 2.0  
-	EnGenius EUB1200AC                    RTL8812AU     USB 3.0  
-	Foxconn WFUR6                         RTL8812AU     USB 2.0  
-	Hawking HD65U                         RTL8821AU     USB 2.0  
-	Hercules Wireless N USB Pico          RTL8188CUS    USB 2.0  
-	I-O Data WN-AC867U                    RTL8812AU     USB 3.0  
-	Linksys WUSB6300                      RTL8812AU     USB 3.0  
-	NEC AtermWL900U PA-WL900U             RTL8812AU     USB 3.0  
-	Netgear A6100                         RTL8821AU     USB 2.0  
-	Netgear WNA1000M                      RTL8188CUS    USB 2.0  
-	Mercusys MW150US                      RTL8188EU     USB 2.0  
-	Planex GW-900D                        RTL8812AU     USB 3.0  
-	Realtek RTL8192CU                     RTL8192CU     USB 2.0  
-	Realtek RTL8188CUS                    RTL8188CUS    USB 2.0  
-	Sitecom WLA-7100                      RTL8812AU     USB 3.0  
-	TP-Link Archer T2U Nano               RTL8821AU     USB 2.0  
-	TP-Link Archer T2U Plus               RTL8821AU     USB 2.0  
-	TP-Link Archer T2U v3                 RTL8821AU     USB 2.0  
-	TP-Link Archer T4U                    RTL8812AU     USB 3.0  
-	TP-Link Archer T4U v2                 RTL8812AU     USB 3.0  
-	TP-Link Archer T4UH v1                RTL8812AU     USB 3.0  
-	TP-Link Archer T4UH v2                RTL8812AU     USB 3.0  
-	TP-Link TL-WN722N v2                  RTL8188EU     USB 2.0  
-	TP-LINK TL-WN723N v3                  RTL8188EU     USB 2.0  
-	TP-LINK TL-WN725N v2                  RTL8188EU     USB 2.0  
-	TP-LINK TL-WN727N v5                  RTL8188EU     USB 2.0  
-	TP-LINK TL-WN821N v4                  RTL8192CU     USB 2.0  
-	TP-LINK TL-WN821N v5                  RTL8192EU     USB 2.0  
-	TP-LINK TL-WN822N v4                  RTL8192EU     USB 2.0  
-	TP-LINK TL-WN823N v1                  RTL8192CU     USB 2.0  
-	TP-LINK TL-WN823N v2                  RTL8192EU     USB 2.0  
-	TRENDnet TEW-805UB                    RTL8812AU     USB 3.0  
-	ZyXEL NWD6605                         RTL8812AU     USB 3.0
-
-
-
-The
 **rue**
 driver supports RealTek RTL8150 based USB Ethernet
 adapters including:
@@ -2534,46 +2511,6 @@ devices, is also supported by this driver:
 
 
 The
-**u3g**
-driver supports the following adapters:
-
-*	Option GT 3G Fusion, GT Fusion Quad, etc. (only 3G part, not WLAN)
-*	Option GT 3G, GT 3G Quad, etc.
-*	Vodafone Mobile Connect Card 3G
-*	Vodafone Mobile Broadband K3772-Z
-*	Qualcomm Inc. CDMA MSM
-*	Qualcomm Inc. GOBI 1000, 2000 and 3000 devices with MDM1000 or MDM2000 chipsets
-*	QUECTEL BGX, ECX, EGX, EMX, EPX, RGX series.
-*	Quectel EM160R (see CAVEATS)
-*	Huawei B190, E180v, E220, E3372, E3372v153, E5573Cs322, ('&lt;Huawei Mobile&gt;')
-*	Novatel U740, MC950D, X950D, etc.
-*	Sierra MC875U, MC8775U, etc.
-*	Panasonic CF-F9 GOBI
-
-(See
-*/sys/dev/usb/serial/u3g.c*
-for the complete list of supported cards for each vendor
-mentioned above.)
-
-The supported 3G cards provide the necessary modem port for ppp, or mpd
-connections as well as extra ports (depending on the specific device) to
-provide other functions (additional command port, diagnostic port, SIM toolkit
-port).
-
-In some of these devices a mass storage device supported by the
-umass(4)
-driver is present which contains Windows and Mac OS X drivers.
-The device starts up in disk mode (TruInstall, ZeroCD, etc.) and requires
-additional commands to switch it to modem mode.
-If your device is not switching automatically, please try to add quirks.
-See
-usbconfig(8)
-and
-usb\_quirk(4).
-
-
-
-The
 **udav**
 driver supports the following adapters:
 
@@ -2700,6 +2637,7 @@ driver supports this modem.
 [[wlan]]
 === Wireless Network Interfaces
 
+
 The
 **ath**
 driver supports all Atheros Cardbus, ExpressCard, PCI and PCIe cards,
@@ -2816,9 +2754,7 @@ because the v4 version of the firmware does not support these chips.
 The newer firmware is too big to fit into these old chips.
 
 
-[i386, amd64] Intel PRO/Wireless 2100 MiniPCI network adapter (man:ipw[4] driver)
 
-[i386, amd64] Intel PRO/Wireless 2200BG/2915ABG MiniPCI and 2225BG PCI network adapters (man:iwi[4] driver)
 
 
 The
@@ -2887,11 +2823,49 @@ sub-driver with the following chipsets:
 *	Intel(R) TBD Sc device
 
 
-[i386, amd64] Intel Dual Band Wireless AC 3160/7260/7265 IEEE 802.11ac network adapters (man:iwm[4] driver)
 
-[i386, amd64] Intel Wireless WiFi Link 4965AGN IEEE 802.11n PCI network adapters (man:iwn[4] driver)
 
-[i386, amd64] Marvell Libertas IEEE 802.11b/g PCI network adapters (man:malo[4] driver)
+The
+**iwn**
+driver provides support for:
+
+*	Intel Centrino Advanced-N 6200
+*	Intel Centrino Advanced-N 6205
+*	Intel Centrino Advanced-N 6230
+*	Intel Centrino Advanced-N 6235
+*	Intel Centrino Advanced-N + WiMAX 6250
+*	Intel Centrino Ultimate-N 6300
+*	Intel Centrino Wireless-N 100
+*	Intel Centrino Wireless-N 105
+*	Intel Centrino Wireless-N 130
+*	Intel Centrino Wireless-N 135
+*	Intel Centrino Wireless-N 1000
+*	Intel Centrino Wireless-N 1030
+*	Intel Centrino Wireless-N 2200
+*	Intel Centrino Wireless-N 2230
+*	Intel Centrino Wireless-N 4965
+*	Intel Centrino Wireless-N 5100
+*	Intel Centrino Wireless-N 6150
+*	Intel Centrino Wireless-N 6200
+*	Intel Centrino Wireless-N 6250
+*	Intel Centrino Wireless-N + WiMAX 6150
+*	Intel Ultimate N WiFi Link 5300
+*	Intel Wireless WiFi Link 4965
+*	Intel WiFi Link 5100
+*	Intel WiMAX/WiFi Link 5150
+*	Intel WiMAX/WiFi Link 5350
+
+
+
+The following cards are among those supported by the
+**malo**
+driver:
+
+	*Card*             *Chip*     *Bus*  *Standard*  
+	Netgear WG311v3    88W8335    PCI    b/g  
+	Tenda TWL542P      88W8335    PCI    b/g  
+	U-Khan UW-2054i    88W8335    PCI    b/g
+
 
 Marvell 88W8363 IEEE 802.11n wireless network adapters (man:mwl[4] driver)
 
@@ -3085,7 +3059,84 @@ Realtek 802.11ac wireless 8822be (RTL8822BE)
 Realtek 802.11ac wireless 8822ce (RTL8822CE)
 
 
-Realtek RTL8192C, RTL8188E, RTL8812A and RTL8821A based PCIe IEEE 802.11b/g/n wireless network adapters (man:rtwn[4] driver)
+
+The
+**rtw89**
+driver supports PCIe devices with the following chipsets:
+
+Realtek 802.11ax wireless 8851be (RTL8851BE)
+
+Realtek 802.11ax wireless 8852ae (RTL8852AE)
+
+Realtek 802.11ax wireless 8852be (RTL8852BE)
+
+Realtek 802.11ax wireless 8852ce (RTL8852CE)
+
+
+
+
+The
+**rtwn\_usb**
+driver supports Realtek RTL8188CUS/RTL8188RU/RTL8188EU/RTL8192CU/RTL8192EU/RTL8812AU/RTL8821AU
+based USB wireless network adapters, including:
+
+	*Card*                                *Chip*        *Bus*  
+	Alfa AWUS036NHR v2                    RTL8188RU     USB 2.0  
+	ASUS USB-AC56                         RTL8812AU     USB 3.0  
+	ASUS USB-N10 NANO                     RTL8188CUS    USB 2.0  
+	ASUS USB-N10 NANO rev B1              RTL8188EUS    USB 2.0  
+	Asus USB-N13, rev. B1                 RTL8192CU     USB 2.0  
+	Belkin F7D1102 Surf Wireless Micro    RTL8188CUS    USB 2.0  
+	Buffalo WI-U2-433DHP                  RTL8821AU     USB 2.0  
+	Buffalo WI-U2-433DM                   RTL8821AU     USB 2.0  
+	Buffalo WI-U3-866D                    RTL8812AU     USB 3.0  
+	D-Link DWA-121 rev C1A (N150 Nano)    RTL8188EU     USB 2.0  
+	D-Link DWA-123 rev D1                 RTL8188EU     USB 2.0  
+	D-Link DWA-125 rev D1                 RTL8188EU     USB 2.0  
+	D-Link DWA-131                        RTL8192CU     USB 2.0  
+	D-Link DWA-131 rev E1                 RTL8192EU     USB 2.0  
+	D-Link DWA-171 rev A1                 RTL8821AU     USB 2.0  
+	D-Link DWA-172 rev A1                 RTL8821AU     USB 2.0  
+	D-Link DWA-180 rev A1                 RTL8812AU     USB 2.0  
+	D-Link DWA-182 rev C1                 RTL8812AU     USB 3.0  
+	Edimax EW-7811Un                      RTL8188CUS    USB 2.0  
+	Edimax EW-7811UTC                     RTL8821AU     USB 2.0  
+	Edimax EW-7822UAC                     RTL8812AU     USB 3.0  
+	EDUP EP-AC1620                        RTL8821AU     USB 2.0  
+	Elecom WDC-150SU2M                    RTL8188EU     USB 2.0  
+	EnGenius EUB1200AC                    RTL8812AU     USB 3.0  
+	Foxconn WFUR6                         RTL8812AU     USB 2.0  
+	Hawking HD65U                         RTL8821AU     USB 2.0  
+	Hercules Wireless N USB Pico          RTL8188CUS    USB 2.0  
+	I-O Data WN-AC867U                    RTL8812AU     USB 3.0  
+	Linksys WUSB6300                      RTL8812AU     USB 3.0  
+	NEC AtermWL900U PA-WL900U             RTL8812AU     USB 3.0  
+	Netgear A6100                         RTL8821AU     USB 2.0  
+	Netgear WNA1000M                      RTL8188CUS    USB 2.0  
+	Mercusys MW150US                      RTL8188EU     USB 2.0  
+	Planex GW-900D                        RTL8812AU     USB 3.0  
+	Realtek RTL8192CU                     RTL8192CU     USB 2.0  
+	Realtek RTL8188CUS                    RTL8188CUS    USB 2.0  
+	Sitecom WLA-7100                      RTL8812AU     USB 3.0  
+	TP-Link Archer T2U Nano               RTL8821AU     USB 2.0  
+	TP-Link Archer T2U Plus               RTL8821AU     USB 2.0  
+	TP-Link Archer T2U v3                 RTL8821AU     USB 2.0  
+	TP-Link Archer T4U                    RTL8812AU     USB 3.0  
+	TP-Link Archer T4U v2                 RTL8812AU     USB 3.0  
+	TP-Link Archer T4UH v1                RTL8812AU     USB 3.0  
+	TP-Link Archer T4UH v2                RTL8812AU     USB 3.0  
+	TP-Link TL-WN722N v2                  RTL8188EU     USB 2.0  
+	TP-LINK TL-WN723N v3                  RTL8188EU     USB 2.0  
+	TP-LINK TL-WN725N v2                  RTL8188EU     USB 2.0  
+	TP-LINK TL-WN727N v5                  RTL8188EU     USB 2.0  
+	TP-LINK TL-WN821N v4                  RTL8192CU     USB 2.0  
+	TP-LINK TL-WN821N v5                  RTL8192EU     USB 2.0  
+	TP-LINK TL-WN822N v4                  RTL8192EU     USB 2.0  
+	TP-LINK TL-WN823N v1                  RTL8192CU     USB 2.0  
+	TP-LINK TL-WN823N v2                  RTL8192EU     USB 2.0  
+	TRENDnet TEW-805UB                    RTL8812AU     USB 3.0  
+	ZyXEL NWD6605                         RTL8812AU     USB 3.0
+
 
 
 The
@@ -3368,7 +3419,12 @@ driver supports Realtek RTL8187B/L based wireless network devices, including:
 	TRENDnet TEW-424UB V3.xR      RTL8225    USB
 
 
-[i386, amd64] Intel PRO/Wireless 3945ABG MiniPCI network adapters (man:wpi[4] driver)
+
+The
+**wpi**
+driver provides support for the
+Intel PRO/Wireless 3945ABG Mini PCIe network adapter.
+
 
 
 The following devices are known to be supported by the
@@ -3469,6 +3525,46 @@ ZyXEL ZyAIR G-220
 
 
 
+
+
+
+The
+**u3g**
+driver supports the following adapters:
+
+*	Option GT 3G Fusion, GT Fusion Quad, etc. (only 3G part, not WLAN)
+*	Option GT 3G, GT 3G Quad, etc.
+*	Vodafone Mobile Connect Card 3G
+*	Vodafone Mobile Broadband K3772-Z
+*	Qualcomm Inc. CDMA MSM
+*	Qualcomm Inc. GOBI 1000, 2000 and 3000 devices with MDM1000 or MDM2000 chipsets
+*	QUECTEL BGX, ECX, EGX, EMX, EPX, RGX series.
+*	Quectel EM160R (see CAVEATS)
+*	Huawei B190, E180v, E220, E3372, E3372v153, E5573Cs322, ('&lt;Huawei Mobile&gt;')
+*	Novatel U740, MC950D, X950D, etc.
+*	Sierra MC875U, MC8775U, etc.
+*	Panasonic CF-F9 GOBI
+
+(See
+*/sys/dev/usb/serial/u3g.c*
+for the complete list of supported cards for each vendor
+mentioned above.)
+
+The supported 3G cards provide the necessary modem port for ppp, or mpd
+connections as well as extra ports (depending on the specific device) to
+provide other functions (additional command port, diagnostic port, SIM toolkit
+port).
+
+In some of these devices a mass storage device supported by the
+umass(4)
+driver is present which contains Windows and Mac OS X drivers.
+The device starts up in disk mode (TruInstall, ZeroCD, etc.) and requires
+additional commands to switch it to modem mode.
+If your device is not switching automatically, please try to add quirks.
+See
+usbconfig(8)
+and
+usb\_quirk(4).
 
 
 [[serial]]
