--- a/website/content/en/releases/14.2R/schedule.adoc
+++ b/website/content/en/releases/14.2R/schedule.adoc
@@ -38,7 +38,7 @@ General discussions about the pending release and known issues should be sent to
 |{localBranchReleng} branch |1 November 2024 |1 November 2024 |{localBranchReleng} branch created; future release engineering proceeds on this branch.
 |BETA1 builds begin |1 November 2024 |1 November 2024 |First beta test snapshot.
 |BETA2 builds begin |8 November 2024 |8 November 2024 |Second beta test snapshot.
-|BETA3 builds begin |15 November 2024 |- |Third beta test snapshot.
+|BETA3 builds begin |15 November 2024 |16 November 2024 |Third beta test snapshot.
 |RC1 builds begin |22 November 2024 |- |First release candidate.
 |RELEASE builds begin |29 November 2024 |- |{localRel}-RELEASE builds begin.
 |RELEASE announcement |3 December 2024 |- |{localRel}-RELEASE press release.
