Document __FreeBSD_version 1500027
Sponsored by:	The FreeBSD Foundation

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -195,6 +195,11 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |October 23, 2024
 |15.0-CURRENT after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-19.1.2-0-g7ba7d8e2f7b6, a.k.a. 19.1.2 release.
 
+|1500027
+|gitref:893d044346d5ae5fe10cc188b8b0762efd2a5b27[repository="src",length=12]
+|November 14, 2024
+|15.0-CURRENT after hiding `struct ifnet` and changing man:sound[4]'s device registration KPI.
+
 |===
 
 [[versions-14]]
